--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,12 @@
     <meta name="author" content="colorlib.com">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,800" rel="stylesheet" />
     <link href="{{ url_for('static', filename='main.css') }}" rel="stylesheet" />
+    <link href="main.css" rel="stylesheet" />
   </head>
   <body>
     <div class="s006">
       
-      <form action="http://127.0.0.1:5000/result" method="POST">
+      <form action="http://35.240.131.7/PROJ/templates/result" method="POST">
         
         <fieldset>
           <legend>KIKKOK .com</legend>
