--- a/templates/rankinverted.html
+++ b/templates/rankinverted.html
@@ -11,6 +11,10 @@
     <link href="{{ url_for('static', filename='tablee.css') }}" type="text/css" rel="stylesheet" />
     <link href="{{ url_for('static', filename='search4.css') }}" type="text/css" rel="stylesheet" />
     <link href="{{ url_for('static', filename='wild14.css') }}" type="text/css" rel="stylesheet" />
+    <link href="rank5.css" type="text/css" rel="stylesheet" />
+    <link href="tablee.css" type="text/css" rel="stylesheet" />
+    <link href="search4.css" type="text/css" rel="stylesheet" />
+    <link href="wild14.css" type="text/css" rel="stylesheet" />
    
 </head>
 <body>
@@ -18,10 +22,10 @@
 
 
   <div class="flexsearch" style="width: 1720px;height: 140px;"> 
-    <a href="http://127.0.0.1:5000/"><img src= "https://sv1.picz.in.th/images/2019/03/24/tblDzq.png" width="200" hight="150" /></a>
+    <a href="http://35.240.131.7/PROJ/templates/"><img src= "https://sv1.picz.in.th/images/2019/03/24/tblDzq.png" width="200" hight="150" /></a>
 
   <div class="flexsearch--wrapper">
-    <form class="flexsearch--form" action="http://127.0.0.1:5000/result" method="POST">
+    <form class="flexsearch--form" action="http://35.240.131.7/PROJ/templates/result" method="POST">
       <div class="flexsearch--input-wrapper">
         <input class="flexsearch--input" type="text" name="text" value="{{text}}" style="width: 490;
         border-color: darkslateblue;"/>
@@ -35,11 +39,11 @@
 
   <div class="choose"><h4 style="    padding: 25 120;
     color: white;">CHOOSE TO SHOW RANK OF</h4></div>
-                    <input class="search" type="button" value="Positional" onClick="this.form.action='http://127.0.0.1:5000/rankPositional'; submit()" formmethod="post">
+                    <input class="search" type="button" value="Positional" onClick="this.form.action='http://35.240.131.7/PROJ/templates/rankPositional'; submit()" formmethod="post">
     
                   
                        
-                        <input class="sea" type="button" value="ALL" onClick="this.form.action='http://127.0.0.1:5000/result'; submit()" formmethod="post">
+                        <input class="sea" type="button" value="ALL" onClick="this.form.action='http://35.240.131.7/PROJ/templates/result'; submit()" formmethod="post">
                       
 
  </div>
