--- a/templates/rankPositional.html
+++ b/templates/rankPositional.html
@@ -25,7 +25,7 @@
       <a href="http://35.240.131.7/PROJ/templates"><img src= "https://sv1.picz.in.th/images/2019/03/24/tblDzq.png" width="200" hight="150" /></a>
 
 		<div class="flexsearch--wrapper">
-			<form class="flexsearch--form" action="http://35.240.131.7/PROJ/templates/result" method="POST">
+			<form class="flexsearch--form" action="http://35.240.131.7/PROJ/templates/result.html" method="POST">
 				<div class="flexsearch--input-wrapper">
 					<input class="flexsearch--input" type="text" name="text" value="{{text}}" style="width: 490;
           border-color: darkslateblue;"/>
@@ -41,9 +41,9 @@
                   
     <div class="choose"><h4 style="    padding: 25 120;
       color: white;">CHOOSE TO SHOW RANK OF</h4></div>
-                            <input class="se" type="button" value="inverted" onClick="this.form.action='http://35.240.131.7/PROJ/templates/rankinverted'; submit()" formmethod="post">
+                            <input class="se" type="button" value="inverted" onClick="this.form.action='http://35.240.131.7/PROJ/templates/rankinverted.html'; submit()" formmethod="post">
                          
-                          <input class="sea" type="button" value="ALL" onClick="this.form.action='http://35.240.131.7/PROJ/templates/result'; submit()" formmethod="post">
+                          <input class="sea" type="button" value="ALL" onClick="this.form.action='http://35.240.131.7/PROJ/templates/result.html'; submit()" formmethod="post">
                         
   
    </div>
