--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="s006">
       
-      <form action="http://35.240.131.7/PROJ/templates/result" method="POST">
+      <form action="http://35.240.131.7/PROJ/templates/result.html" method="POST">
         
         <fieldset>
           <legend>KIKKOK .com</legend>
