--- a/templates/result.html
+++ b/templates/result.html
@@ -25,7 +25,7 @@
 
 		<div class="flexsearch--wrapper"  style="width: 700px;
     height: 120px;">
-			<form class="flexsearch--form" action="http://35.240.131.7/PROJ/templates/result" method="POST">
+			<form class="flexsearch--form" action="http://35.240.131.7/PROJ/templates/result.html" method="POST">
 				<div class="flexsearch--input-wrapper">
 					<input class="flexsearch--input" type="text" name="text" value="{{text}}" style="width: 490;
           border-color: darkslateblue;"/>
@@ -36,8 +36,8 @@
 		</div>
     <div class="choose"><h4 style="    padding: 25 120;
       color: white;">CHOOSE TO SHOW RANK OF</h4></div>
-         <input class="se" type="button" value="inverted" onClick="this.form.action='http://35.240.131.7/PROJ/templates/rankinverted'; submit()" formmethod="post">
-        <input class="sea" type="button" value="Positional" onClick="this.form.action='http://35.240.131.7/PROJ/templates/rankPositional'; submit()" formmethod="post">
+         <input class="se" type="button" value="inverted" onClick="this.form.action='http://35.240.131.7/PROJ/templates/rankinverted.html'; submit()" formmethod="post">
+        <input class="sea" type="button" value="Positional" onClick="this.form.action='http://35.240.131.7/PROJ/templates/rankPositional.html'; submit()" formmethod="post">
 
       
    </div>
