--- a/templates/result.html
+++ b/templates/result.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="colorlib.com">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,800" rel="stylesheet" />
-    <!-- <link href="{{ url_for('static', filename='rank5.css') }}" type="text/css" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='rank5.css') }}" type="text/css" rel="stylesheet" />
     <link href="{{ url_for('static', filename='tablee.css') }}" type="text/css" rel="stylesheet" />
     <link href="{{ url_for('static', filename='search4.css') }}" type="text/css" rel="stylesheet" />
-    <link href="{{ url_for('static', filename='wild14.css') }}" type="text/css" rel="stylesheet" /> -->
-    <link href="rank5.css" type="text/css" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='wild14.css') }}" type="text/css" rel="stylesheet" />
+    <!-- <link href="rank5.css" type="text/css" rel="stylesheet" />
     <link href="tablee.css" type="text/css" rel="stylesheet" />
     <link href="search4.css" type="text/css" rel="stylesheet" />
-    <link href="wild14.css" type="text/css" rel="stylesheet" />
+    <link href="wild14.css" type="text/css" rel="stylesheet" /> -->
 </head>
 <body>
     
