--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="colorlib.com">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,800" rel="stylesheet" />
-    <!-- <link href="{{ url_for('static', filename='main.css') }}" rel="stylesheet" /> -->
+    <link href="{{ url_for('static', filename='main.css') }}" rel="stylesheet" />
     <!-- <link href="main.css" rel="stylesheet" /> -->
 
   </head>
